trunk/Archive2/bf/5b0363280a5205/output
+ clang++ -std=c++11 -O3 -Wall -pedantic -pthread main.cpp
In file included from main.cpp:15:
In file included from /usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/iostream:39:
In file included from /usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/ostream:38:
In file included from /usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/ios:38:
In file included from /usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/iosfwd:39:
In file included from /usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/bits/stringfwd.h:40:
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/bits/memoryfwd.h:50:1: error: expected unqualified-id
namespace std _GLIBCXX_VISIBILITY(default)
^
In file included from main.cpp:15:
In file included from /usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/iostream:39:
In file included from /usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/ostream:38:
In file included from /usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/ios:38:
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/iosfwd:76:48: error: unknown type name 'char_traits'
  template<typename _CharT, typename _Traits = char_traits<_CharT> >
                                               ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/iosfwd:76:59: error: expected ',' or '>' in template-parameter-list
  template<typename _CharT, typename _Traits = char_traits<_CharT> >
                                                          ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/iosfwd:76:68: error: expected unqualified-id
  template<typename _CharT, typename _Traits = char_traits<_CharT> >
                                                                   ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/iosfwd:79:48: error: unknown type name 'char_traits'
  template<typename _CharT, typename _Traits = char_traits<_CharT> >
                                               ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/iosfwd:79:59: error: expected ',' or '>' in template-parameter-list
  template<typename _CharT, typename _Traits = char_traits<_CharT> >
                                                          ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/iosfwd:79:68: error: expected unqualified-id
  template<typename _CharT, typename _Traits = char_traits<_CharT> >
                                                                   ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/iosfwd:82:48: error: unknown type name 'char_traits'
  template<typename _CharT, typename _Traits = char_traits<_CharT> >
                                               ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/iosfwd:82:59: error: expected ',' or '>' in template-parameter-list
  template<typename _CharT, typename _Traits = char_traits<_CharT> >
                                                          ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/iosfwd:82:68: error: expected unqualified-id
  template<typename _CharT, typename _Traits = char_traits<_CharT> >
                                                                   ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/iosfwd:85:48: error: unknown type name 'char_traits'
  template<typename _CharT, typename _Traits = char_traits<_CharT> >
                                               ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/iosfwd:85:59: error: expected ',' or '>' in template-parameter-list
  template<typename _CharT, typename _Traits = char_traits<_CharT> >
                                                          ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/iosfwd:85:68: error: expected unqualified-id
  template<typename _CharT, typename _Traits = char_traits<_CharT> >
                                                                   ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/iosfwd:88:48: error: unknown type name 'char_traits'
  template<typename _CharT, typename _Traits = char_traits<_CharT> >
                                               ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/iosfwd:88:59: error: expected ',' or '>' in template-parameter-list
  template<typename _CharT, typename _Traits = char_traits<_CharT> >
                                                          ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/iosfwd:88:68: error: expected unqualified-id
  template<typename _CharT, typename _Traits = char_traits<_CharT> >
                                                                   ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/iosfwd:91:48: error: unknown type name 'char_traits'
  template<typename _CharT, typename _Traits = char_traits<_CharT>,
                                               ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/iosfwd:91:59: error: expected ',' or '>' in template-parameter-list
  template<typename _CharT, typename _Traits = char_traits<_CharT>,
                                                          ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/iosfwd:91:67: error: expected unqualified-id
  template<typename _CharT, typename _Traits = char_traits<_CharT>,
                                                                  ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
